№3_сertificates and secrets in Minikube, secure data storage/new-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-service
  labels:
    app: application-3-service
spec:
  type: NodePort
  selector:
    app: application-3-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30333
