№3_сertificates and secrets in Minikube, secure data storage/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-manifest
spec:
  tls:
    - hosts:
        - localhost
      secretName: ingress-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-service
                port:
                  number: 3000
